@@ -5,6 +5,8 @@
 	* lib/iqueue.c :
 	* lib/iqueue.h :
 
+	  - Now relations are normalised before they are enqueued.
+
 	  - The queue implementation now uses the tbe_rel structure, and
 	    as a tbe_rel queue, is apropriately renamed to rqueue.
 
